# glowdesk-ai

./: .env.example  .gitignore  .ruff.toml  Dockerfile  pyproject.toml
docs/: postgresql-vs-clickhouse.md
src/: dependencies.py  main.py
src/agents/: customer_chat_agent.py
src/agents/prompts/: system_prompt.py
src/config/: redis_config.py  settings.py
src/db/: database.py
src/models/: base_models.py  chat_models.py  compose_models.py
src/routers/: chat_router.py  compose_router.py  health_router.py
src/services/: chat_service.py  compose_service.py  tenant_service.py
src/tools/: backend_api.py  tool_definitions.py
tests/: conftest.py  test_agent.py  test_api_key.py  test_chat_router.py  test_compose_router.py  test_compose_service.py  test_database.py  test_e2e_chat.py  test_health.py  test_models.py  test_settings.py  test_system_prompt.py  test_tenant_service.py  test_tools.py
